Fix overflow issue

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -799,8 +799,8 @@ Services Styles
 
 .team
 {
-  width: 370px;
-  min-height: 400px;
+  width: 22%;
+  min-height: 300px;
   border: 1px solid rgba(133,133,133,.15);
   background-color: #fff;
   -moz-box-shadow: 0 0 8px rgba(0,0,0,.09);
